--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,14 @@
 
   "name": "SIU Web Clipper",
   "version": "1.0",
+  "content_security_policy": "default-src *; frame-src *; img-src *; connect-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval' https://*.pillartechnology.com; object-src 'self'",
 
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["js/background.js"]
   },
   "content_scripts": [ {
       // "css": [  ],
@@ -16,6 +20,9 @@
   } ],
   "permissions": [
     "activeTab",
+    "contextMenus",
+    "http://*/*",
+    "https://*/*",
     "https://ajax.googleapis.com/"
   ]
 }
